--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-/bin/
-/target/
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+*.eml
+
+# Mac
+.DS_Store
 /.DS_Store
+
+# Maven
+log/
+target/
+
+/bin/
